@@ -1,3 +1,11 @@
+2014-01-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* semi-setup.el: S/MIME signed entity respects
+	mime-pgp-verify-when-preview's value.
+
+	* mime-pgp.el (mime-display-multipart/signed): Renamed from
+	mime-display-multipart/pgp-signed.  Support S/MIME signed entity.
+
 2014-01-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-pgp.el (mime-pgp-verify-when-preview): Set default to t.
